cap nhat code goi bang procedure